// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display the sq version 1`] = `
<div
  className="page-footer page-container"
  id="footer"
>
  <GlobalFooterBranding />
  <ul
    className="page-footer-menu"
  >
    <li
      className="page-footer-menu-item"
    >
      Enterprise Edition
    </li>
    <li
      className="page-footer-menu-item"
    >
      <AppVersionStatus />
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        rel="noopener noreferrer"
        target="_blank"
        to="https://www.gnu.org/licenses/lgpl-3.0.txt"
      >
        footer.license
      </ForwardRef(Link)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        rel="noopener noreferrer"
        target="_blank"
        to="https://community.sonarsource.com/c/help/sq"
      >
        footer.community
      </ForwardRef(Link)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/"
      >
        footer.documentation
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/instance-administration/plugin-version-matrix/"
      >
        footer.plugins
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        to="/web_api"
      >
        footer.web_api
      </ForwardRef(Link)>
    </li>
  </ul>
</div>
`;

exports[`should not render the only logged in information 1`] = `
<div
  className="page-footer page-container"
  id="footer"
>
  <GlobalFooterBranding />
  <ul
    className="page-footer-menu"
  >
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        rel="noopener noreferrer"
        target="_blank"
        to="https://www.gnu.org/licenses/lgpl-3.0.txt"
      >
        footer.license
      </ForwardRef(Link)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        rel="noopener noreferrer"
        target="_blank"
        to="https://community.sonarsource.com/c/help/sq"
      >
        footer.community
      </ForwardRef(Link)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/"
      >
        footer.documentation
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/instance-administration/plugin-version-matrix/"
      >
        footer.plugins
      </withAppStateContext(DocLink)>
    </li>
  </ul>
</div>
`;

exports[`should render the only logged in information 1`] = `
<div
  className="page-footer page-container"
  id="footer"
>
  <GlobalFooterBranding />
  <ul
    className="page-footer-menu"
  >
    <li
      className="page-footer-menu-item"
    >
      Community Edition
    </li>
    <li
      className="page-footer-menu-item"
    >
      <AppVersionStatus />
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        rel="noopener noreferrer"
        target="_blank"
        to="https://www.gnu.org/licenses/lgpl-3.0.txt"
      >
        footer.license
      </ForwardRef(Link)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        rel="noopener noreferrer"
        target="_blank"
        to="https://community.sonarsource.com/c/help/sq"
      >
        footer.community
      </ForwardRef(Link)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/"
      >
        footer.documentation
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <withAppStateContext(DocLink)
        to="/instance-administration/plugin-version-matrix/"
      >
        footer.plugins
      </withAppStateContext(DocLink)>
    </li>
    <li
      className="page-footer-menu-item"
    >
      <ForwardRef(Link)
        to="/web_api"
      >
        footer.web_api
      </ForwardRef(Link)>
    </li>
  </ul>
</div>
`;

exports[`should show the db warning message 1`] = `
<Alert
  display="inline"
  id="evaluation_warning"
  variant="warning"
>
  <p
    className="big"
  >
    footer.production_database_warning
  </p>
  <p>
    <InstanceMessage
      message="footer.production_database_explanation"
    />
  </p>
</Alert>
`;
